Bug 159968 - LibreOffice can't render markers (eg. arrows) embeded to end of line
Summary: LibreOffice can't render markers (eg. arrows) embeded to end of line
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.8.0 target:24.2.2 inRelease...
Keywords: filter:svg
: 161605 (view as bug list)
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2024-02-29 17:15 UTC by Piotr Osada
Modified: 2024-07-16 08:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Osada 2024-02-29 17:15:04 UTC
The arrow from the attached SVG file is rendered as a square overlying the end of the line.

Word, Firefox, Chrome and Edge display this SVG image correctly.

Version: 24.2.1.2 (X86_64) / LibreOffice Community
Build ID: db4def46b0453cc22e2d0305797cf981b68ef5ac
CPU threads: 8; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: threaded

attachment 192867 [details]
tdf#158445 Arrow.svg


attachment 192868 [details]
tdf#158445 Arrow.svg - Inkscape.png


attachment 192869 [details]
tdf#158445 SVG arrow LO24.2.1.2.odt


attachment 192870 [details]
tdf#158445 SVG Arrow in LO24.2.1.2.png


attachment 192871 [details]
tdf#158445 SVG arrow MSO Word 365 2401.docx


attachment 192872 [details]
tdf#158445 SVG arrow MSO Word 365 2401.png
Comment 1 Xisco Faulí 2024-02-29 17:26:22 UTC
Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fd948fd27356e703fffc7e46df0f0e3a22f57967
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2024-02-29 17:27:16 UTC
Also reproduced in

Version: 5.2.0.0.alpha1
Build ID: 902b28a39528b6c92602e9b521a1d0861be1caf9
CPU Threads: 8; OS Version: Linux 6.1; UI Render: default; 
Locale: es-ES (es_ES.UTF-8)
Comment 3 Xisco Faulí 2024-03-01 10:20:22 UTC
Problem is in the preserveAspectRatio
Comment 4 Xisco Faulí 2024-03-01 12:05:29 UTC
(In reply to Xisco Faulí from comment #3)
> Problem is in the preserveAspectRatio

I was wrong. The problem is that LibreOffice doesn't support style="overflow:visible". If this line is removed then Chrome/Firefox display the image the same way as LibreOffice
Comment 5 Commit Notification 2024-03-01 20:46:20 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a661f9a2e0a05de1705a8e9d930c148a1416be29

tdf#159968: Support overflow:visible in marker element

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-03-04 08:39:04 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/6eb331934f27993db83a2175d22bdd554a775ad8

tdf#159968: Support overflow:visible in marker element

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Piotr Osada 2024-04-02 11:14:54 UTC
Confirm that it works in:

Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 4; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: threaded

I've posted this implementation in the release notes:
https://wiki.documentfoundation.org/ReleaseNotes/24.2

Thank you Xisco for the quick solution of this issue. I believe this will greatly improve the usability of LO.
Comment 8 Piotr Osada 2024-04-02 17:23:39 UTC
@Xisco, could you maybe check, if description in release notes really says about what is contained in your commit, please?
Comment 9 stragu 2024-06-17 13:19:10 UTC
*** Bug 161605 has been marked as a duplicate of this bug. ***